Bug 212055 - kopete dowloanding closing break
Summary: kopete dowloanding closing break
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
: 216493 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-10-27 13:57 UTC by Zhu Sha Zang
Modified: 2009-12-06 22:20 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Zhu Sha Zang 2009-10-27 13:57:08 UTC
Application that crashed: kopete
Version of the application: 0.80.2
KDE Version: 4.3.2 (KDE 4.3.2)
Qt Version: 4.5.3
Operating System: Linux 2.6.31-gentoo-r3-darkness i686

What I was doing when the application crashed:
I'm receiving some arch from a contact when i forgot that and try close kopete. Then, during closing process kopete teminate with a crash.



 -- Backtrace:
Application: Kopete (kopete), signal: Segmentation fault
[Current thread is 0 (LWP 21354)]

Thread 2 (Thread 0xb102eb70 (LWP 21386)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb6349135 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb63d675f in QWaitCondition::wait (this=0x85b5428, mutex=0x85b5424, time=4294967295) at thread/qwaitcondition_unix.cpp:87
#3  0xb6ce5eea in QHostInfoAgent::run (this=0x85b5418) at kernel/qhostinfo.cpp:260
#4  0xb63d5968 in QThreadPrivate::start (arg=0x85b5418) at thread/qthread_unix.cpp:188
#5  0xb6345440 in start_thread () from /lib/libpthread.so.0
#6  0xb589ca2e in clone () from /lib/libc.so.6

Thread 1 (Thread 0xb4ed0700 (LWP 21354)):
[KCrash Handler]
#6  0x00000000 in ?? ()
#7  0xb7492f44 in Kopete::Transfer::showHtmlMessage () from /usr/lib/libkopete.so.4
#8  0xb7493c60 in Kopete::Transfer::slotResultEmitted () from /usr/lib/libkopete.so.4
#9  0xb749646b in Kopete::Transfer::qt_metacall () from /usr/lib/libkopete.so.4
#10 0xb64c8062 in QMetaObject::activate (sender=0x96d9c60, from_signal_index=<value optimized out>, to_signal_index=7, argv=<value optimized out>) at kernel/qobject.cpp:3101
#11 0xb64c8653 in QMetaObject::activate (sender=0x96d9c60, m=0xb685ada8, local_signal_index=3, argv=0xbfb5bd48) at kernel/qobject.cpp:3178
#12 0xb66bfca4 in KJob::result (this=0x96d9c60, _t1=0x96d9c60) at /usr/local/var/tmp/portage/kde-base/kdelibs-4.3.2-r3/work/kdelibs-4.3.2_build/kdecore/kjob.moc:188
#13 0xb66c014a in KJob::emitResult (this=0x96d9c60) at /usr/local/var/tmp/portage/kde-base/kdelibs-4.3.2-r3/work/kdelibs-4.3.2/kdecore/jobs/kjob.cpp:304
#14 0xb66c01f8 in KJob::kill (this=0x96d9c60, verbosity=KJob::EmitResult) at /usr/local/var/tmp/portage/kde-base/kdelibs-4.3.2-r3/work/kdelibs-4.3.2/kdecore/jobs/kjob.cpp:112
#15 0xb6a2a237 in KUiServerJobTracker::Private::_k_killJob (this=0x8b834e8) at /usr/local/var/tmp/portage/kde-base/kdelibs-4.3.2-r3/work/kdelibs-4.3.2/kdeui/jobs/kuiserverjobtracker.cpp:58
#16 0xb6a2a2a9 in KUiServerJobTracker::qt_metacall (this=0x957a9c0, _c=QMetaObject::InvokeMetaMethod, _id=25, _a=0xbfb5bebc)
    at /usr/local/var/tmp/portage/kde-base/kdelibs-4.3.2-r3/work/kdelibs-4.3.2_build/kdeui/kuiserverjobtracker.moc:94
#17 0xb64c8062 in QMetaObject::activate (sender=0x87917d8, from_signal_index=<value optimized out>, to_signal_index=5, argv=<value optimized out>) at kernel/qobject.cpp:3101
#18 0xb64c8653 in QMetaObject::activate (sender=0x87917d8, m=0xb6c335c4, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3178
#19 0xb6b9d968 in OrgKdeJobViewInterface::cancelRequested (this=0x87917d8) at /usr/local/var/tmp/portage/kde-base/kdelibs-4.3.2-r3/work/kdelibs-4.3.2_build/kdeui/jobviewiface.moc:113
#20 0xb6b9dd6b in OrgKdeJobViewInterface::qt_metacall (this=0x87917d8, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0xbfb5c12c)
    at /usr/local/var/tmp/portage/kde-base/kdelibs-4.3.2-r3/work/kdelibs-4.3.2_build/kdeui/jobviewiface.moc:90
#21 0xb65abd6f in QDBusConnectionPrivate::deliverCall (this=0x80a3240, object=0x87917d8, msg=@0x853f99c, metaTypes=@0x853f9a0, slotIdx=5) at qdbusintegrator.cpp:891
#22 0xb65b2b27 in QDBusCallDeliveryEvent::placeMetaCall (this=0x853f970, object=0x87917d8) at qdbusintegrator_p.h:101
#23 0xb64c4cdd in QObject::event (this=0x87917d8, e=0x853f970) at kernel/qobject.cpp:1099
#24 0xb5b6b27c in QApplicationPrivate::notify_helper (this=0x8097980, receiver=0x87917d8, e=0x853f970) at kernel/qapplication.cpp:4065
#25 0xb5b71291 in QApplication::notify (this=0xbfb5c9d4, receiver=0x87917d8, e=0x853f970) at kernel/qapplication.cpp:3605
#26 0xb6a2fa4b in KApplication::notify (this=0xbfb5c9d4, receiver=0x87917d8, event=0x853f970)
    at /usr/local/var/tmp/portage/kde-base/kdelibs-4.3.2-r3/work/kdelibs-4.3.2/kdeui/kernel/kapplication.cpp:302
#27 0xb64b5e6f in QCoreApplication::notifyInternal (this=0xbfb5c9d4, receiver=0x87917d8, event=0x853f970) at kernel/qcoreapplication.cpp:606
#28 0xb64b64a1 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x807f0c8) at kernel/qcoreapplication.h:213
#29 0xb64b674e in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1140
#30 0xb64dd270 in postEventSourceDispatch (s=0x8099ea0) at kernel/qcoreapplication.h:218
#31 0xb521beda in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#32 0xb521f6f0 in ?? () from /usr/lib/libglib-2.0.so.0
#33 0x08099e20 in ?? ()
#34 0x00000000 in ?? ()

Reported using DrKonqi
Comment 1 Roman Jarosz 2009-10-31 15:31:13 UTC
SVN commit 1043026 by rjarosz:

Cancel file transfers on exit or when contact is deleted.

BUG: 212055


 M  +20 -6     libkopete/kopetetransfermanager.cpp  
 M  +6 -2      libkopete/kopetetransfermanager.h  
 M  +1 -2      protocols/irc/irctransferhandler.h  
 M  +0 -1      protocols/wlm/wlmaccount.h  
 M  +1 -0      protocols/wlm/wlmchatsession.cpp  
 M  +2 -0      protocols/wlm/wlmsocket.cpp  
 M  +1 -0      protocols/wlm/wlmtransfermanager.cpp  
 M  +6 -1      protocols/wlm/wlmtransfermanager.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1043026
Comment 2 Roman Jarosz 2009-10-31 18:39:58 UTC
SVN commit 1043074 by rjarosz:

Backport commit 1043026.
Cancel file transfers on exit or when contact is deleted.

CCBUG: 212055



 M  +20 -6     libkopete/kopetetransfermanager.cpp  
 M  +6 -2      libkopete/kopetetransfermanager.h  
 M  +1 -2      protocols/irc/irctransferhandler.h  
 M  +0 -1      protocols/wlm/wlmaccount.h  
 M  +1 -0      protocols/wlm/wlmchatsession.cpp  
 M  +1 -0      protocols/wlm/wlmtransfermanager.cpp  
 M  +6 -1      protocols/wlm/wlmtransfermanager.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1043074
Comment 3 Dario Andres 2009-12-06 22:20:14 UTC
*** Bug 216493 has been marked as a duplicate of this bug. ***