Cancel file transfers on exit or when contact is deleted.

BUG: 212055

svn path=/trunk/KDE/kdenetwork/kopete/; revision=1043026